kubernetes/home.vijayakumar.xyz/media/sabnzbd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sabnzbd
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/name: sabnzbd
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
        app.kubernetes.io/name: sabnzbd
    spec:
      containers:
        - image: ghcr.io/linuxserver/sabnzbd:4.4.1
          imagePullPolicy: IfNotPresent
          name: sabnzbd
          ports:
            - containerPort: 8080
              name: web-tcp
              protocol: TCP
            - containerPort: 8080
              name: web-udp
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: sabnzbd
              subPath: sabnzbd-config
            - mountPath: /media
              readOnly: false
              name: nfs
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: sabnzbd
          persistentVolumeClaim:
            claimName: sabnzbd-pvc
        - name: nfs
          persistentVolumeClaim:
            claimName: media-share-pvc
