kubernetes/home.vijayakumar.xyz/media/sabnzbd/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  tls:
    secretName: home-vijayakumar-xyz
  routes:
    - match: Host(`sabnzbd.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
      middlewares:
        - name: default-headers
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    tailscale.com/funnel: 'true'
spec:
  ingressClassName: tailscale
  tls:
    - hosts: [sabnzbd]
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
